// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render a MimeTypeIndicator 1`] = `
<DocumentFragment>
  <div
    class="mimeTypeIndicator"
    style="color: rgb(255, 255, 255); font-size: 52px; background-color: rgb(0, 114, 58);"
  >
    <span
      aria-label="fa-file-excel-o"
      class="fa fa-file-excel-o"
    />
  </div>
</DocumentFragment>
`;

exports[`Should render a MimeTypeIndicator with different dimensions 1`] = `
<DocumentFragment>
  <div
    class="mimeTypeIndicator"
    style="color: rgb(255, 255, 255); font-size: 32px; background-color: rgb(0, 114, 58); width: 200px; height: 200px;"
  >
    <span
      aria-label="fa-file-excel-o"
      class="fa fa-file-excel-o"
    />
  </div>
</DocumentFragment>
`;
